--- a/hypr/.config/hypr/hyprland/colors.conf
+++ b/hypr/.config/hypr/hyprland/colors.conf
@@ -1,3 +1,3 @@
-$active = rgba(7aa2f7b3)
-$inactive = rgba(0a0a0ae6)
-$shadow = rgba(0a0a0a99)
+$active = rgba(10,10,10,1)
+$inactive = rgba(10,10,10,.5)
+$shadow = rgba(10,10,10,.5)
