--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -7,7 +7,7 @@ general {
 background {
     monitor = 
     path = ~/.cache/wallpaper
-    color = rgba(15161eff)
+    color = rgba(10,10,10,1.0)
 
     blur_passes = 2
     blur_size = 7
@@ -33,10 +33,10 @@ background {
 
 input-field {
     monitor = 
-    size = 1200, 100
+    size = 1600, 100
     outline_thickness = 0
-    outer_color = rgba(00000000)
-    inner_color = rgba(00,00,00,00)
+    outer_color = rgba(00,00,00,.0)
+    inner_color = rgba(00,00,00,.0)
     rounding = -1
 
     position = 0, -80
@@ -45,13 +45,13 @@ input-field {
     
     dots_size = 36
     dots_text_format = *
-    font_color = rgba(0a0a0a80)
+    font_color = rgba(10,10,10,.8)
 }
 
 label {
   monitor =
   text = $TIME
-  color = rgba(00000080)
+  color = rgba(10,10,10,.8)
   font_size = 900
   font_family = JetBrainsMono NF
 
@@ -64,8 +64,8 @@ label {
     monitor =
     text = cmd[update:1000] ~/.local/bin/lockbatt
     text_align = center
-    color = rgba(00000080)
-    font_size = 40
+    color = rgba(10,10,10,.8)
+    font_size = 30
     font_family = JetBrainsMono NF
 
     position = 0, -10
