--- a/hypr/.config/hypr/hyprland/colors.conf
+++ b/hypr/.config/hypr/hyprland/colors.conf
@@ -1,3 +1,3 @@
-$active = rgba(10,10,10,1)
-$inactive = rgba(10,10,10,.5)
+$active = rgba(67,99,133,1)
+$inactive = rgba(10,10,10,1)
 $shadow = rgba(10,10,10,.5)
