--- a/crucible/packages.conf
+++ b/crucible/packages.conf
@@ -96,6 +96,7 @@ FONTS=(
   inter-font
   noto-fonts
   noto-fonts-emoji
+  ttf-cascadia-code-nerd
   ttf-jetbrains-mono-nerd
   ttf-nerd-fonts-symbols-mono
   ttf-roboto
