--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -23,7 +23,7 @@ bind = $mainMod ALT, B, exec, $browser
 bind = $mainMod ALT, Y, exec, $terminal -e yazi
 bind = $mainMod ALT, N, exec, brave --incognito
 bind = $mainMod ALT, D, exec, flatpak run com.discordapp.Discord --ozone-platform=wayland
-bind = $mainMod ALT, T, exec, flatpak run io.freetubeapp.FreeTube --enable-features=UseOzonePlatform --ozone-platform=wayland
+bind = $mainMod ALT, T, exec, flatpak run io.freetubeapp.FreeTube
 bind = $mainMod ALT, O, exec, obsidian --ozone-platform=wayland
 bind = $mainMod ALT, E, exec, pkill -SIGUSR1 waybar
 bind = $mainMod ALT, W, exec, ~/.config/waybar/reload.sh
