--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -29,7 +29,7 @@ bind = $mainMod ALT, O, exec, obsidian --ozone-platform=wayland
 bind = $mainMod ALT, E, exec, pkill -SIGUSR1 waybar
 bind = $mainMod ALT, W, exec, ~/.config/waybar/reload.sh
 bind = $mainMod ALT, M, exec, pprofile
-bind = $mainMod ALT, code:51, exec, 1password
+bind = $mainMod ALT, code:51, exec, 1password --ozone-platform-hint=auto
 
 # webapps
 bind = $mainMod ALT, S, exec, $webapp="https://open.spotify.com"
