--- a/hypr/.config/hypr/hyprland/keybinds.conf
+++ b/hypr/.config/hypr/hyprland/keybinds.conf
@@ -1,6 +1,6 @@
 $mainMod = SUPER
 
-$terminal = ghostty
+$terminal = wezterm
 $filemanager = nautilus
 $launcher = fuzzel
 $browser = brave
@@ -30,6 +30,7 @@ bind = $mainMod ALT, E, exec, pkill -SIGUSR1 waybar
 bind = $mainMod ALT, W, exec, ~/.config/waybar/reload.sh
 bind = $mainMod ALT, M, exec, pprofile
 bind = $mainMod ALT, code:51, exec, 1password --ozone-platform-hint=auto
+bind = $mainMod ALT, I, exec, swaync-client -t
 
 # webapps
 bind = $mainMod ALT, S, exec, $webapp="https://open.spotify.com"
